src/test/deca/context/valid/SansObjet/PrimaryExpr7-Cast-CastInPlus.deca
// Description:
//    Cast in a Plus operation; conserves an int result.
//
// Results:
//    (void)
//
// Historique:
//    cree le 13/01/2022

{
        int x = 3 + (int)(2.4);
}
